--- a/templates/index/4.html
+++ b/templates/index/4.html
@@ -57,13 +57,7 @@
 								</ul>
 							</li>
 							<li class="{% if title == 'Our Services' or category == 'services' %}current{% endif %}"><a href="{% url 'services:list' %}">Services</a></li>
-							<li class="dropdown"><a href="#">Shop</a>
-								<ul>
-									<li><a href="{% url 'shop:list' %}">Products</a></li>
-									<li><a href="{% url 'shop:cart' %}">Cart</a></li>
-									<li><a href="{% url 'shop:checkout' %}">Checkout</a></li>
-								</ul>
-							</li>
+							<li class="{% if title == 'Your Ultimate Electronics Shop' or category == 'Our Shop' %}current{% endif %}"><a href="{% url 'shop:list' %}">Shop</a></li>
 							<li class="{% if title == 'Blogs' or category == 'Blogs > Test Category' %}current{% endif %}"><a href="{% url 'blog:list' %}">Blogs</a></li>
 							<li class="{% if title == 'Contact Us' %}current{% endif %}"><a href="{% url 'contact' %}">Contact</a></li>
 							<li class="dropdown"><a href="#">Account</a>
