--- a/templates/shop/base.html
+++ b/templates/shop/base.html
@@ -10,11 +10,13 @@
 {% block meta %}
 
 {% endblock %}
+<meta name="author" content="Jeff Odhiambo">
 <title>{% block title %}{% endblock %}</title>
 <!-- Stylesheets -->
 {% include 'partials/css.html' %}
 <link rel="shortcut icon" href="/static/images/favicon.png" type="image/x-icon">
 <link rel="icon" href="/static/images/favicon.png" type="image/x-icon">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.css" />
 
 </head>
 
