--- a/templates/shop/products/1.html
+++ b/templates/shop/products/1.html
@@ -4,7 +4,6 @@
 <meta name="title" content="VSTech Limited - Your Ultimate Electronics Shop">
 <meta name="keywords" content="electronics, gadgets, technology, laptops, Apple, MacBooks, HP, online shop">
 <meta name="description" content="Discover the latest electronics and gadgets at VSTech Limited. Shop a wide range of high-quality products and accessories, including laptops, Apple devices, MacBooks, HP laptops, and more.">
-<meta name="author" content="Jeff Odhiambo">
 {% endblock %}
 {% block content %}
 	<!-- Featured Products -->
@@ -74,6 +73,7 @@
 					</div>
 				</div>
 				<div class="col-lg-9 col-md-12 col-sm-12 content-side">
+					{% include 'partials/messages.html' %}
 					<!--MixitUp Galery-->
 					<div class="mixitup-gallery">
 						<!--Filter-->
@@ -103,10 +103,24 @@
 													{% if product.in_stock %}<span class="alert alert-success py-0">{{ product.in_stock }} in stock</span>{% else %}<span class="alert alert-danger py-0">Out of Stock</span>{% endif %}
 													{% if product.discount %}<span class="alert alert-info py-0">{{ product.discount }}% OFF</span>{% endif %}
 												</span>
+												<span class="rating">
+													{% for star in "*****" %}
+														{% if forloop.counter <= product.get_average_rating %}
+															<i class="fas fa-star"></i>
+														{% else %}
+															<i class="far fa-star"></i>
+														{% endif %}
+													{% endfor %}
+												</span>
 											</div>
 											<div class="icon-box">
 												<a href="{{ product.get_absolute_url }}" class="ui-btn like-btn"><i class="fa fa-heart"></i></a>
-												<a href="shop-cart.html" class="ui-btn add-to-cart"><i class="fa fa-shopping-cart"></i></a>
+												
+												<form action="{% url 'shop:cart_add' product.id %}" method="post">
+													{% csrf_token %}
+													<input type="hidden" name="quantity" value="1">
+													<button type="submit"><a class="ui-btn add-to-cart"><i class="fa fa-shopping-cart"></i></a></button>
+												</form>
 											</div>
 										</div>
 									</div>
