--- a/templates/index/2.html
+++ b/templates/index/2.html
@@ -100,13 +100,7 @@
 								</ul>
 							</li>
 							<li class="{% if title == 'Our Services' or category == 'services' %}current{% endif %}"><a href="{% url 'services:list' %}">Services</a></li>
-							<li class="dropdown"><a href="#">Shop</a>
-								<ul>
-									<li><a href="{% url 'shop:list' %}">Products</a></li>
-									<li><a href="{% url 'shop:cart' %}">Cart</a></li>
-									<li><a href="{% url 'shop:checkout' %}">Checkout</a></li>
-								</ul>
-							</li>
+							<li class="{% if title == 'Your Ultimate Electronics Shop' or category == 'Our Shop' %}current{% endif %}"><a href="{% url 'shop:list' %}">Shop</a></li>
 							<li class="{% if title == 'Blogs' or category == 'Blogs > Test Category' %}current{% endif %}"><a href="{% url 'blog:list' %}">Blogs</a></li>
 							<li class="{% if title == 'Contact Us' %}current{% endif %}"><a href="{% url 'contact' %}">Contact</a></li>
 						</ul>
@@ -119,7 +113,18 @@
 							<button class="ui-btn ui-btn search-btn">
 								<span class="icon lnr lnr-icon-search"></span>
 							</button>
-							<a href="{% url 'shop:cart' %}" class="ui-btn"><i class="lnr-icon-shopping-cart"></i></a>
+							{% with total_items=cart|length %}
+								<a href="{% url 'shop:cart' %}" class="ui-btn">
+									<span class="d-flex no-wrap">
+									<i class="lnr-icon-shopping-cart"></i>
+									{% if total_items > 0 %}
+										<sup class="text-success" style="font-size: 16px;">{{ total_items }}</sup>
+									{% else %}
+										<sup class="text-danger" style="font-size: 16px;">0</sup>
+									{% endif %}
+									</span>
+								</a>
+							{% endwith %}
 						</div>
 
 
@@ -320,7 +325,7 @@
 					<div class="project-block-two">
 						<div class="inner-box">
 							<div class="image-box">
-								<figure class="image"><a href="{{ project.get_absolute_url }}" class="lightbox-image"><img src="{% if project.front_image %}{{ project.front_image.url }}{% else %}/static/images/resource/project-1.jpg{% endif %}" alt=""></a></figure>
+								<figure class="image"><a href="{% if project.front_image %}{{ project.front_image.url }}{% else %}/static/images/resource/project-1.jpg{% endif %}" class="lightbox-image"><img src="{% if project.front_image %}{{ project.front_image.url }}{% else %}/static/images/resource/project-1.jpg{% endif %}" alt=""></a></figure>
 							</div>
 							<div class="content-box">
 								<h5 class="title"><a href="{{ project.get_absolute_url }}">Tech Solutions</a></h5>
