--- a/templates/socialaccount/snippets/provider_list.html
+++ b/templates/socialaccount/snippets/provider_list.html
@@ -5,14 +5,21 @@
 {% for provider in socialaccount_providers %}
 {% if provider.id == "openid" %}
 {% for brand in provider.get_brands %}
-<li>
+<span>
   <a title="{{brand.name}}" 
      class="socialaccount_provider btn btn-primary {{provider.id}} {{brand.id}}" href="{% provider_login_url provider.id openid=brand.openid_url process=process %}">{{brand.name}}</a>
-</li>
+</span>>
 {% endfor %}
 {% endif %}
-<li>
-  <a title="{{provider.name}}" class="socialaccount_provider btn btn-{% if provider.name == 'Google' %}danger{% elif provider.name == 'GitHub' %}dark{% else %}primary{% endif %} btn-lg my-2 w-100 {{provider.id}}" 
-     href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}">{{provider.name}}</a>
-</li>
+<span>
+  <a title="{{provider.name}}" class="socialaccount_provider nav-link {{provider.id}}" 
+     href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}">
+     {% if provider.name == 'Google' %}
+      <img src="/static/google.png" width="25" alt="{{provider.name}}" title="{{provider.name}}">
+     {% elif provider.name == 'GitHub' %}
+      <img src="/static/github.png" width="25" alt="{{provider.name}}" title="{{provider.name}}"> 
+     {% else %}
+     {% endif %}
+    </a>
+</span>
 {% endfor %}
