--- a/templates/shop/cart.html
+++ b/templates/shop/cart.html
@@ -120,7 +120,7 @@
                       <a class="theme-btn btn-style-one" href="{% url 'shop:list' %}"><span class="btn-title">Continue Shopping</span> </a> </div>
                     </div>
                     <div class="col-md-6 m-2">
-                      <a class="theme-btn btn-style-one" href="{% url 'shop:checkout' %}"><span class="btn-title">Proceed to Checkout</span> </a> </div>
+                      <a class="theme-btn btn-style-one" href="{% url 'orders:order_create' %}"><span class="btn-title">Proceed to Checkout</span> </a> </div>
                     </div>
                   </div>
               </div>
