--- a/templates/partials/mobile_search_header.html
+++ b/templates/partials/mobile_search_header.html
@@ -19,7 +19,7 @@
                     <div class="contact-info-box">
                         <i class="icon fa fa-power-off" aria-hidden="true"></i>
                         <span class="title">Account</span>
-                        <a href="">Profile</a>
+                        <a href="{% url 'users:profile' %}">Profile</a>
                     </div>
                 </li>
                 <li>
