--- a/templates/partials/top-nav.html
+++ b/templates/partials/top-nav.html
@@ -22,7 +22,7 @@
 						</li>
 						<li><a href="{% url 'faq' %}">Help</a></li>
 						{% if request.user.is_authenticated %}
-							<li><a href="">Profile</a></li>
+							<li><a href="{% url 'users:profile' %}">Profile</a></li>
 							<li><a href="{% url 'account_logout' %}">Logout</a></li>
 						{% else %}				
 							<li><a href="{% url 'account_signup' %}">Register</a></li>
