--- a/templates/shop/orders/order/create.html
+++ b/templates/shop/orders/order/create.html
@@ -120,7 +120,7 @@
 								</div>
 								<div class="acc-content">
 									<div class="payment-info">
-										<p class="mb-0">Make payment via our M-Pesa Till Number - </p>
+										<p class="mb-0">Kindly make the payment using our designated M-Pesa Till Number - 8183588.</p>
 									</div>
 								</div>
 							</li>
@@ -131,7 +131,7 @@
 								</div>
 								<div class="acc-content">
 									<div class="payment-info">
-										<p class="mb-0">Cash Payment will be accepted upon delivery</p>
+										<p class="mb-0">Cash payment will be accepted upon delivery.</p>
 									</div>
 								</div>
 							</li>
