completed site indexing

--- a/static/css/style-home10.css
+++ b/static/css/style-home10.css
@@ -696,7 +696,7 @@
 
 .contact-ten-section {
   padding: 120px 0;
-  background-image: url(../images/layout_10/bg1.jpg);
+  background-image: url(../images/resource/image-1.jpg);
   background-size: 32%;
   background-position: top right;
   background-repeat: no-repeat;
