--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -7,6 +7,8 @@
     {% block meta %}
 
     {% endblock %}
+    <link rel="shortcut icon" href="/static/images/favicon.png" type="image/x-icon">
+  <link rel="icon" href="/static/images/favicon.png" type="image/x-icon">
     <meta name="author" content="Jeff Odhiambo">
     {% include 'partials/css.html' %}
     <title>{% block head_title %}{% endblock %} - Accounts- VSTech Limited</title>
