--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -15,7 +15,7 @@
         bottom: 0;
         width: 100%;
         height: 100%;
-        background-image: url(/static/images/app4/cta-bg1-1.png);
+        background-image: url(/static/images/cta-bg1-1.png);
         background-repeat: no-repeat;
         background-position: bottom center;
         background-size: cover;
@@ -180,10 +180,9 @@
 				<div class="inner-container d-flex" style="background-color: unset;">
 					<div class="copyright-text text-white">© {{ current_year }} <a href="/">VSTech Limited</a>. All Rights Reserved</div>
 					
-					<ul class="social-icon-two ms-auto">
-						<li><a href="#"><i class="fab fa-twitter"></i></a></li>
-						<li><a href="#"><i class="fab fa-pinterest"></i></a></li>
-						<li><a href="#"><i class="fab fa-instagram"></i></a></li>
+					<ul class="ms-auto d-flex">
+						<li><a class="text-white" href="{% url 'policy' %}">Privacy Policy</a></li>
+						<li><a class="text-white mx-2" href="{% url 'terms' %}">Terms and Condition</i></a></li>
 					</ul>
 				</div>
 			</div>
