--- a/templates/services/details.html
+++ b/templates/services/details.html
@@ -37,8 +37,8 @@
 							<div class="icon-box">
 								<i class="lnr lnr-icon-pie-chart"></i>
 							</div>
-							<h3>View VSTech Profile</h3>
-							<a href="/static/VSTech Portfolio.pdf" class="theme-btn btn-style-two bg-light"><span class="btn-title text-black"> View</span></a>
+							<h3>Request this service</h3>
+							<a href="mailto:support@vstech.co.ke?subject=Requesting for {{ service.title }}" class="theme-btn btn-style-two bg-light"><span class="btn-title text-black"> Request</span></a>
 							</div>
 						</div>
 						</div>
