--- a/templates/shop/orders/order/create.html
+++ b/templates/shop/orders/order/create.html
@@ -120,7 +120,7 @@
 								</div>
 								<div class="acc-content">
 									<div class="payment-info">
-										<p class="mb-0">Kindly make the payment using our designated M-Pesa Till Number - 8183588.</p>
+										<p class="mb-0">How to make the M-Pesa or Visa payment to be communicated via the provided number.</p>
 									</div>
 								</div>
 							</li>
@@ -130,7 +130,7 @@
 									Cash Payment
 								</div>
 								<div class="acc-content">
-									<div class="payment-info">
+									<div class="payment-info">	
 										<p class="mb-0">Cash payment will be accepted upon delivery.</p>
 									</div>
 								</div>
