--- a/templates/index/5.html
+++ b/templates/index/5.html
@@ -10,7 +10,7 @@
 <link href="/static/css/responsive.css" rel="stylesheet">
 
 <!-- Dark Theme -->
-<link href="" id="themeLink" rel="stylesheet">
+<link href="/static/css/style{% if user.is_authenticated %}-{{ request.user.preferences.theme }}{% endif %}.css" id="themeLink" rel="stylesheet">
 
 <link rel="shortcut icon" href="/static/images/favicon.png" type="image/x-icon">
 <link rel="icon" href="/static/images/favicon.png" type="image/x-icon">
@@ -72,7 +72,7 @@
 									<li class="p-2">
 										<div class="form-check form-switch m-0">
 											<label class="form-check-label my-0 py-0" for="flexSwitchCheckChecked">Dark Theme</label>
-											<input class="form-check-input my-0 py-0" type="checkbox" role="switch" id="flexSwitchCheckChecked">
+											<input class="form-check-input my-0 py-0" type="checkbox" {% if request.user.is_authenticated and request.user.preferences.theme == 'dark' %}checked{% endif %} role="switch" id="flexSwitchCheckChecked">
 										</div>
 									</li>
 								</ul>
