--- a/templates/index/6.html
+++ b/templates/index/6.html
@@ -14,7 +14,7 @@
 <link href="/static/css/responsive.css" rel="stylesheet">
 
 <!-- Dark Theme -->
-<link href="" id="themeLink" rel="stylesheet">
+<link href="/static/css/style{% if user.is_authenticated %}-{{ request.user.preferences.theme }}{% endif %}.css" id="themeLink" rel="stylesheet">
 
 <link rel="shortcut icon" href="/static/images/favicon.png" type="image/x-icon">
 <link rel="icon" href="/static/images/favicon.png" type="image/x-icon">
