--- a/templates/partials/mobile_search_header.html
+++ b/templates/partials/mobile_search_header.html
@@ -72,7 +72,7 @@
             <li>
                 <div class="form-check form-switch px-4">
                     <label class="form-check-label my-0 py-0" for="flexSwitchCheckChecked">Dark Theme</label>
-                    <input class="form-check-input my-0 py-0" type="checkbox" role="switch" id="flexSwitchCheckChecked">
+                    <input class="form-check-input my-0 py-0" type="checkbox" {% if request.user.is_authenticated and request.user.preferences.theme == 'dark' %}checked{% endif %} role="switch" id="flexSwitchCheckChecked">
                 </div>
             </li>
         </ul>
