--- a/templates/partials/top-nav.html
+++ b/templates/partials/top-nav.html
@@ -17,10 +17,9 @@
 						<li>
 							<div class="form-check form-switch m-0 p-0">
 								<label class="form-check-label my-0 py-0" for="flexSwitchCheckChecked">Dark Theme</label>
-								<input class="form-check-input my-0 py-0" type="checkbox" role="switch" id="flexSwitchCheckChecked">
+								<input class="form-check-input my-0 py-0" type="checkbox" {% if request.user.is_authenticated and request.user.preferences.theme == 'dark' %}checked{% endif %} role="switch" id="flexSwitchCheckChecked">
 							</div>
 						</li>
-						<li><a href="{% url 'faq' %}">Help</a></li>
 						{% if request.user.is_authenticated %}
 							<li><a href="{% url 'users:profile' %}">Profile</a></li>
 							<li><a href="{% url 'account_logout' %}">Logout</a></li>
