--- a/templates/socialaccount/signup.html
+++ b/templates/socialaccount/signup.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
-    <h2 class="theme-btn btn-style-one">{% trans "Sign Up" %}</h2>
+    <h2 class="text-center">{% trans "Sign Up" %}</h2>
 
 <p>{% blocktrans with provider_name=account.get_provider.name site_name=site.name %}You are about to use your {{provider_name}} account to login to
 {{site_name}}. As a final step, please complete the following form:{% endblocktrans %}</p>
@@ -16,7 +16,7 @@
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <button type="submit" class="theme-btn btn-style-one">{% trans "Sign Up" %} &raquo;</button>
+  <button type="submit" class="theme-btn btn-style-one mt-2 w-100">{% trans "Sign Up" %} &raquo;</button>
 </form>
 
 {% endblock %}
