--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
 <div class="page-wrapper">
 
 	<!-- Preloader -->
-	<div class="preloader"></div>
+	<!-- <div class="preloader"></div> -->
 
     {% include 'partials/top-nav.html' %}
     {% include 'partials/breadcrumb.html' %}
