--- a/templates/index/1.html
+++ b/templates/index/1.html
@@ -31,7 +31,7 @@
 <div class="page-wrapper">
 
 	<!-- Preloader -->
-	<div class="preloader"></div>
+	<!-- <div class="preloader"></div> -->
 
     {% include 'partials/top-nav.html' %}
 	{% include 'partials/messages.html' %}
