--- a/templates/500.html
+++ b/templates/500.html
@@ -28,7 +28,7 @@
 <div class="page-wrapper">
 
 	<!-- Preloader -->
-	<div class="preloader"></div>
+	<!-- <div class="preloader"></div> -->
         <a href="/" class="text-center">Return to homepage</a>
 
 	<!-- 404 Section -->
