--- a/templates/index/6.html
+++ b/templates/index/6.html
@@ -34,7 +34,7 @@
 <div class="page-wrapper">
 
 	<!-- Preloader -->
-	<div class="preloader"></div>
+	<!-- <div class="preloader"></div> -->
 
 	{% include 'partials/top-nav.html' %}
 	
