--- a/templates/newsletter/templates/blogs.html
+++ b/templates/newsletter/templates/blogs.html
@@ -3,19 +3,132 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="viewport" content="width=display-width, initial-scale=1.0, maximum-scale=1.0,">
-    <link href="/static/css/style.css" rel="stylesheet">
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{ title }}</title>
     <style>
         a{
             text-decoration: none !important;
         }
     </style>
-    <title>{{ title }}</title>
+    <link href="/static/css/style.css" rel="stylesheet">
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
 </head>
+<body style="justify-content:center !important; background-color:#f4f5f8;">
 
-<body style="display:flex; justify-content: center !important; background-color:#f4f5f8;">
+    <div id="template-editing-canvas" class="keep-crisp activateselect template-editing-canvas justify-content-center"
+    style="height: 100%; display:flex;">
+
+    <div data-template-type="headers">
+        <style type="text/css">
+            .ReadMsgBody {
+                width: 100%;
+                background-color: #ffffff;
+            }
+
+            .ExternalClass {
+                width: 100%;
+                background-color: #ffffff;
+            }
+
+            .ExternalClass,
+            .ExternalClass p,
+            .ExternalClass span,
+            .ExternalClass font,
+            .ExternalClass td,
+            .ExternalClass div {
+                line-height: 100%;
+            }
+
+            html {
+                width: 100%;
+            }
+
+            body {
+                -webkit-text-size-adjust: none;
+                -ms-text-size-adjust: none;
+                margin: 0;
+                padding: 0;
+                font-family: 'Open Sans', Arial, Sans-serif !important;
+            }
+
+            table {
+                border-spacing: 0;
+                table-layout: auto;
+                margin: 0 auto;
+            }
+
+            img {
+                display: block !important;
+                overflow: hidden !important;
+            }
+
+            .yshortcuts a {
+                border-bottom: none !important;
+            }
+
+            img:hover {
+                opacity: 0.9 !important;
+            }
+
+            a {
+                color: #4a4a4a;
+                text-decoration: none;
+            }
+
+            .textbutton a {
+                font-family: 'open sans', arial, sans-serif !important;
+            }
+
+            .btn-link a {
+                color: #FFFFFF !important;
+            }
+
+            /*Responsive*/
+            @media only screen and (max-width: 640px) {
+                body {
+                    margin: 0px;
+                    width: auto !important;
+                    font-family: 'Open Sans', Arial, Sans-serif !important;
+                }
+
+                .table-inner {
+                    width: 90% !important;
+                    max-width: 90% !important;
+                }
+
+                .table-full {
+                    width: 100% !important;
+                    max-width: 100% !important;
+                    text-align: center !important;
+                }
+            }
+
+            @media only screen and (max-width: 479px) {
+                body {
+                    width: auto !important;
+                    font-family: 'Open Sans', Arial, Sans-serif !important;
+                }
+
+                .table-inner {
+                    width: 90% !important;
+                    text-align: center !important;
+                }
+
+                .table-full {
+                    width: 100% !important;
+                    max-width: 100% !important;
+                    text-align: center !important;
+                }
+
+                /*gmail*/
+                u+.body .full {
+                    width: 100% !important;
+                    width: 100vw !important;
+                }
+            }
+        </style>
+    </div>
+    <div data-template-type="html" style="height: auto; padding-bottom: 149px;" class="ui-sortable">
 
     <div id="holder" style="width: 700px;">
         <table align="center" bgcolor="#333333" border="0" cellpadding="0" cellspacing="0" width="100%" data-thumb=""
@@ -1185,7 +1298,7 @@
                                                                     <span>&nbsp;&nbsp;|&nbsp;&nbsp;</span>
                                                                     <unsubscribe>
                                                                         <form action="{% url 'subscribe:unsubscribe' %}" method="get">
-                                                                            <input type="hidden" name="email" value="{{ subscriber.email }}">
+                                                                            <input type="hidden" name="email" value="{{ recipient_email }}">
                                                                             <input type="submit" value="unsubscribe" style="background-color: transparent; color: gray;">
                                                                         </form>
                                                                     </unsubscribe>
@@ -1207,6 +1320,10 @@
         </tbody>
     </table>
     </div>
+
+    </div>
+    </div>
+
 
 </body>
 
